<package>
  <name>reconfigurable_transform_publisher</name>
  <version>1.0.0</version>
  <description>Like tf/static_transform_publisher, but is reconfigurable at runtime using dynamic reconfigure and interactive markers.</description>
  <maintainer email="lazewatd@engr.oregonstate.edu">Dan Lazewatsky</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/reconfigurable_transform_publisher</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Dan Lazewatsky</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rospy</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>easy_markers</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>python_orocos_kdl</run_depend>
  
  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->

</package>
